--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
               pariatur deleniti nihil eaque delectus odit aliquid quod animi sit. </p>
           </div>
           <div class="col-2">
-            <p class="fs-5">About</p>
+            <p>About</p>
             <ul>
               <li><a class="nav-link" href="">team</a></li>
               <li><a class="nav-link" href="">Join us</a></li>
